syntax = "proto3";

package user;

option go_package = "./";

// User service definition
service UserProtoService {
  // HelloWorld API endpoint
  rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse) {}
  rpc GetOneUser (GetOneUserRequest) returns (GetOneUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc IsExistUser (IsExistUserRequest) returns (IsExistUserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

// Request message for HelloWorld
message HelloWorldRequest {
  string name = 1;
}

// Response message for HelloWorld
message HelloWorldResponse {
  string message = 1;
}

message GetOneUserRequest {
  uint32 id = 1;
  string email = 2;
}

message GetOneUserResponse {
  uint32 id = 1;
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  uint32 id = 1;
  string email = 2;
}

message UpdateUserRequest {
  uint32 id = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserResponse {
  uint32 id = 1;
  string email = 2;
}

message IsExistUserRequest {
  string username = 1;
}

message IsExistUserResponse {
  bool is_exist = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  uint32 id = 1;
}
